# ComfyUI-Simple-video-effects

./: .gitignore  README.md  __init__.py  batch_comfy_zoom_sequence.py  comfy_camera_move.py  comfy_camera_move_video.py  comfy_camera_shake.py  comfy_camera_shake_video.py  comfy_close_up.py  comfy_close_up_image.py  comfy_image_audio_csv.py  comfy_image_sequence_overlay.py  comfy_image_transition.py  comfy_simple_video_combiner.py  comfy_video_combiner.py  comfy_video_image_overlay.py  comfy_video_overlay.py  comfy_video_overlay_batch.py  comfy_video_splitter.py  comfy_zoom_sequence.py  comfy_zoom_sequence_video.py  pyproject.toml  requirements.txt
scripts/: batch_comfy_zoom_sequence.py  comfy_add_soundtrack.py  comfy_audio_video_merger.py  comfy_camera_move.py  comfy_camera_move_video.py  comfy_camera_shake.py  comfy_camera_shake_video.py  comfy_chromatic_aberration.py  comfy_close_up.py  comfy_close_up_image.py  comfy_color_adjustment.py  comfy_color_adjustment_video.py  comfy_image_audio_csv.py  comfy_image_transition.py  comfy_simple_video_combiner.py  comfy_video_combiner.py  comfy_video_image_overlay.py  comfy_video_loop_extender.py  comfy_video_overlay.py  comfy_video_overlay_batch.py  comfy_video_overlay_from_file.py  comfy_video_splitter.py  comfy_zoom_sequence.py  comfy_zoom_sequence_video.py  zoom_core.py
workflows/: close_up.json  close_up_image.json
