# pyproject.toml
[project]
name = "Simple-video-effects"  # Unique and immutable node identifier.
description = "17 lightweight video manipulation nodes for ComfyUI including zoom, camera movement, overlays, and transitions."
version = "1.1.0"  # Semantic versioning
dependencies = []  # Populated from requirements.txt if present.

[project.urls]
Repository = "https://github.com/scofano/ComfyUI-Simple-video-effects"

[tool.comfy]
PublisherId = "dansco"
DisplayName = "Simple Video Effects"
