[project]
name = "simple-video-effects"
description = "25 lightweight ComfyUI nodes for video effects and utilities: zoom, camera movement, shake, close-up, overlays, transitions, color adjustment, chromatic aberration, audio merging/soundtracks, video splitting/combining/looping, and optional GPU acceleration for supported workflows."
version = "1.3.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "torch>=1.10",
    "ffmpeg-python",
    "soundfile",
    "numpy",
    "Pillow",
]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/scofano/ComfyUI-Simple-video-effects"
Documentation = "https://github.com/scofano/ComfyUI-Simple-video-effects#readme"
Issues = "https://github.com/scofano/ComfyUI-Simple-video-effects/issues"

[tool.comfy]
PublisherId = "dansco"
DisplayName = "Simple Video Effects"
Banner = "https://raw.githubusercontent.com/scofano/ComfyUI-Simple-video-effects/main/header.jpg"
